@startuml workflow-run-state
' ============================================================
' L2 - WorkflowRun 状态机与 Step 执行模型
' 事实来源：backend/lib/cgc_2046/workflows/workflow_run.ex:59（@status_values 七态）·
'   workflow_run.ex:376-407（:cancel from 三态 / :expire from [:pending,:waiting]）·
'   backend/lib/cgc_2046/workers/approval_expiry_worker.ex:63-99,135-153（waiting 扫描面）·
'   backend/lib/cgc_2046/workflows/jido_adapter.ex:28-51（Step 四分类）
' 状态机：pending → running → waiting →
'   succeeded/failed/cancelled/expired（7 态）。
' 人工步骤模式：waiting 挂起 + hibernate/thaw；人发信号 → SignalMatch
'   放行 → 恢复执行（人触发的是"恢复"而非"启动下一段"）。
' ============================================================
title WorkflowRun 状态机（L2，7 态）
skinparam backgroundColor white

state "pending\n（已创建，未启动）" as PENDING
state "running\n（DAG 执行中）" as RUNNING
state "waiting\n（人等信号，挂起 hibernate）" as WAITING
state "succeeded\n（执行成功）" as SUCCEEDED
state "failed\n（Action 失败 / 拒绝终态）" as FAILED
state "cancelled\n（用户取消 / 级联回收）" as CANCELLED
state "expired\n（审批超时过期）" as EXPIRED

[*] --> PENDING : 创建 run（实例化定义）
PENDING --> RUNNING : 启动执行\n（:start_run 闭环；learning 为 :start 协议流转）
RUNNING --> WAITING : 执行到人工节点\n（SignalMatch 挂起监听）
WAITING --> RUNNING : 信号到达 → thaw 恢复\nSignalMatch 校验并放行
RUNNING --> SUCCEEDED : 全部 Step 完成\n（learning：LearningProgressWorker 完成判定）
RUNNING --> FAILED : Action 失败 / 校验拒绝
PENDING --> CANCELLED : :cancel（from [:pending,:running,:waiting]，:376-391）
RUNNING --> CANCELLED : 用户取消 / event.ended →\nResearchRunReaper 回收教研 run
WAITING --> CANCELLED : 用户主动取消
WAITING --> EXPIRED : ApprovalExpiryWorker */5min 扫 waiting\n（approval_expiry_worker.ex:98,138-153）\ndeadline = updated_at + definition.approval_timeout\n（nil = 永不超时）
PENDING --> EXPIRED : :expire 允许 from [:pending,:waiting]\n（workflow_run.ex:393-404；\n当前扫描面仅 waiting）

note bottom of WAITING
  **人工步骤模式（D-A1）**：WorkflowRun 是有状态实体，执行到人工节点
  → waiting 挂起；人操作后发 Signal（如 research.outline.submitted）→
  SignalMatch 放行 → 恢复执行。长等待由 hibernate/thaw 解决：
  waiting 落 checkpoint（workflow state + thread pointer %{id,rev}），
  信号到达 thaw 恢复（POC-2 G1 A1-A5 全 PASS；恢复期信号不丢不重）。
end note

note bottom of EXPIRED
  **审批超时（F7 方案 A，已落地）**：ApprovalExpiryWorker
  Oban cron */5min 扫 waiting run——deadline 派生唯一真源
  ApprovalDeadline（进 waiting 的 updated_at +
  definition.approval_timeout；nil = 永不超时，永不扫中）；
  转换走 :expire（from [:pending,:waiting]，含 checkpoint 清理）。
  已落地（approval_expiry_worker.ex:63-99，F2 闭环）。
end note

note bottom of CANCELLED
  **取消语义（码现状）**：:cancel from [:pending,:running,:waiting]
  （workflow_run.ex:376-391，checkpoint 清理 + finished_at）——
  用户/运营取消；event.ended / course.ended → ResearchRunReaper
  批量回收教研 run（research_run_reaper.ex:15-17）。
end note

' ---------------- Step 四分类 ---------------- 
note right
  **Step 四分类（jido_adapter.ex:28-51 编译对应）**：
  ① 自动步骤  = auto → ActionNode（Jido Action，schema 驱动校验）
  ② 人工步骤  = manual → 信号门控子图（SignalMatch 等待）
  ③ 门控/分支 = gate → Condition（按 Fact 条件路由）
  ④ 子 workflow = sub_workflow → 递归 build_workflow
end note

@enduml
